<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/Screen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2196F3"
    tools:context=".SingleplayerGameActivity">

    <ImageButton
        android:id="@+id/ClockwiseRotateButton"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginEnd="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="40dp"
        android:contentDescription="@string/rotateclockwise"
        android:tint="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@android:drawable/ic_menu_rotate" />

    <ImageButton
        android:id="@+id/ShiftRightButton"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginEnd="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="40dp"
        android:contentDescription="@string/shiftright"
        android:tint="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/ClockwiseRotateButton"
        app:srcCompat="@android:drawable/ic_media_ff"
        tools:srcCompat="@android:drawable/ic_media_ff" />

    <ImageButton
        android:id="@+id/CounterClockwiseRotateButton"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginBottom="40dp"
        android:contentDescription="@string/counterclockwiserotate"
        android:tint="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@android:drawable/ic_menu_rotate" />

    <ImageButton
        android:id="@+id/ShiftLeftButton"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginBottom="40dp"
        android:contentDescription="@string/shiftleft"
        android:tint="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/CounterClockwiseRotateButton"
        app:srcCompat="@android:drawable/ic_media_rew" />

    <ImageButton
        android:id="@+id/ShiftDownButton"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="40dp"
        android:contentDescription="@string/shiftdown"
        android:tint="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/ShiftRightButton"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/ShiftLeftButton"
        app:srcCompat="@android:drawable/arrow_down_float" />

    <ImageView
        android:id="@+id/GameBoard"
        android:layout_width="211dp"
        android:layout_height="421dp"
        android:layout_marginStart="80dp"
        android:layout_marginLeft="80dp"
        android:layout_marginEnd="81dp"
        android:layout_marginRight="81dp"
        android:layout_marginBottom="45dp"
        android:background="#E8F5E9"
        android:contentDescription="@string/gameboard"
        app:layout_constraintBottom_toTopOf="@+id/ShiftRightButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.512"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/gameboard" />

    <FrameLayout
        android:id="@+id/gameFrame"
        android:layout_width="211dp"
        android:layout_height="421dp"
        app:layout_constraintBottom_toBottomOf="@+id/GameBoard"
        app:layout_constraintEnd_toEndOf="@+id/GameBoard"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/GameBoard"
        app:layout_constraintTop_toTopOf="@+id/GameBoard">

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>